--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build Source\stokUygulama.sln
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test Source\UrunRepositoryTests\UrunRepositoryTests.csproj
