--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -8,7 +8,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+env:
+  AZURE_WEBAPP_NAME: stokControl
+  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
 jobs:
   build:
 
@@ -32,3 +34,11 @@ jobs:
     steps:
     - name: Deploy to Production
       run: echo "Production'a başarıyla dağıtıldı!"
+    - name: Publish
+      run:   dotnet publish ./Source/stokUygulama.sln --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+    - name: DeploymentwAzure
+      run: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
